--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -13,6 +13,22 @@ workshop = [
     "450814997", # cba_a3
     "463939057", # ace
 
+    # compats
+    "2522638637", # ace arsenal extended
+
+    # tools
+    "2369477168", # advanced developer tools
+
+    # server mods
+    "1768992669", # inidb2
+]
+
+[hemtt.launch.noaceax]
+workshop = [
+    # dependencies
+    "450814997", # cba_a3
+    "463939057", # ace
+
     # tools
     "2369477168", # advanced developer tools
 
