--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -42,6 +42,25 @@ parameters = [ # TODO: Figure out how to include this so it'll work for other co
   "C:\\Users\\freya\\Documents\\Arma 3 - Other Profiles\\Maid\\missions\\Dev.VR\\mission.sqm",
 ]
 
+[hemtt.launch.vr]
+workshop = [
+    # dependencies
+    "450814997", # cba_a3
+    "463939057", # ace
+
+    # compats
+    "2522638637", # ace arsenal extended
+
+    # tools
+    "2369477168", # advanced developer tools
+
+    # server mods
+    "1768992669", # inidb2
+]
+parameters = [
+    "C:\\Users\\freya\\Documents\\Arma 3 - Other Profiles\\Maid\\missions\\Dev.VR\\mission.sqm"
+]
+
 [hemtt.launch.noaceax]
 workshop = [
   # dependencies
