--- a/.hemtt/project.toml
+++ b/.hemtt/project.toml
@@ -9,49 +9,65 @@ url = "https://github.com/WitchFreya/EvolvedRoleProgression"
 
 [hemtt.launch.default]
 workshop = [
-    # dependencies
-    "450814997", # cba_a3
-    "463939057", # ace
+  # dependencies
+  "450814997", # cba_a3
+  "463939057", # ace
 
-    # compats
-    "2522638637", # ace arsenal extended
+  # compats
+  "2522638637", # ace arsenal extended
 
-    # tools
-    "2369477168", # advanced developer tools
+  # tools
+  "2369477168", # advanced developer tools
 
-    # server mods
-    "1768992669", # inidb2
+  # server mods
+  "1768992669", # inidb2
+]
+
+[hemtt.launch.vr]
+workshop = [
+  # dependencies
+  "450814997", # cba_a3
+  "463939057", # ace
+
+  # compats
+  "2522638637", # ace arsenal extended
+
+  # tools
+  "2369477168", # advanced developer tools
+
+  # server mods
+  "1768992669", # inidb2
+]
+parameters = [ # TODO: Figure out how to include this so it'll work for other contributors
+  "C:\\Users\\freya\\Documents\\Arma 3 - Other Profiles\\Maid\\missions\\Dev.VR\\mission.sqm",
 ]
 
 [hemtt.launch.noaceax]
 workshop = [
-    # dependencies
-    "450814997", # cba_a3
-    "463939057", # ace
+  # dependencies
+  "450814997", # cba_a3
+  "463939057", # ace
 
-    # tools
-    "2369477168", # advanced developer tools
+  # tools
+  "2369477168", # advanced developer tools
 
-    # server mods
-    "1768992669", # inidb2
+  # server mods
+  "1768992669", # inidb2
 ]
 
 [hemtt.launch.noini]
 workshop = [
-    # dependencies
-    "450814997", # cba_a3
-    "463939057", # ace
+  # dependencies
+  "450814997", # cba_a3
+  "463939057", # ace
 
-    # tools
-    "2369477168", # advanced developer tools
+  # tools
+  "2369477168", # advanced developer tools
 ]
-
-[version]
-git_hash = 0
-
-[hemtt.release]
-archive = false
 
 [files]
 include = ["logo_textless_ca.paa"]
 exclude = ["*.inc", "*.md"]
+
+[asc]
+exlucde = [".inc.sqf"] # will be unnecessary in hemtt's next release
